--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="7dp"
     android:layout_marginRight="7dp"
@@ -11,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
-        android:layout_weight="3.5"
+        android:layout_weight="0.1"
         android:orientation="horizontal">
 
         <TextView
@@ -34,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
-        android:layout_weight="3.5"
+        android:layout_weight="0.1"
         android:orientation="horizontal">
 
         <TextView
@@ -57,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp"
-        android:layout_weight="3.5"
+        android:layout_weight="0.1"
         android:orientation="horizontal">
 
         <TextView
@@ -78,13 +79,15 @@
 
     <Space
         android:layout_width="match_parent"
-        android:layout_height="13dp" />
+        android:layout_height="13dp"
+        android:layout_weight="0.1"
+        />
 
-    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="419dp" />
+        android:layout_height="match_parent"
+        android:layout_weight="30" />
 
 </LinearLayout>
 
