--- a/app/src/main/res/layout/fragment_next_day.xml
+++ b/app/src/main/res/layout/fragment_next_day.xml
@@ -17,8 +17,8 @@
 
             <ImageView
                 android:id="@+id/weatherIconImageView1"
-                android:layout_width="161dp"
-                android:layout_height="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:contentDescription="@string/condition_icon"
                 android:src="@drawable/icon_na" />
@@ -59,8 +59,8 @@
 
             <ImageView
                 android:id="@+id/weatherIconImageView2"
-                android:layout_width="161dp"
-                android:layout_height="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:contentDescription="@string/condition_icon"
                 android:src="@drawable/icon_na" />
@@ -101,8 +101,8 @@
 
             <ImageView
                 android:id="@+id/weatherIconImageView3"
-                android:layout_width="161dp"
-                android:layout_height="100dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:contentDescription="@string/condition_icon"
                 android:src="@drawable/icon_na" />
