--- a/app/src/main/res/layout-large-land/fragment_next_day_landscape.xml
+++ b/app/src/main/res/layout-large-land/fragment_next_day_landscape.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.NextDayFragment">
+    tools:context="layout.large.NextDayFragmentLand">
 
     <LinearLayout
         android:layout_width="match_parent"
