--- a/app/src/main/res/layout-large/fragment_moon_l.xml
+++ b/app/src/main/res/layout-large/fragment_moon_l.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.SunFragment">
+    tools:context="layout.large.MoonFragmentL">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,12 +12,12 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imageView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icon_32" />
+            app:srcCompat="@drawable/icon_31" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -33,32 +33,11 @@
                 android:text="East time : " />
 
             <TextView
-                android:id="@+id/SunFargtextViewEastTime"
+                android:id="@+id/MoonFargtextViewRiseMoon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="00,00" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:text="East azimuth : " />
-
-            <TextView
-                android:id="@+id/SunFargtextViewEastAzimuth"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="00,00" />
+                android:text="@string/before_calculate" />
         </LinearLayout>
 
         <LinearLayout
@@ -75,11 +54,11 @@
                 android:text="West time : " />
 
             <TextView
-                android:id="@+id/SunFargtextViewWestTime"
+                android:id="@+id/MoonFargtextViewSetMoon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="00,00" />
+                android:text="@string/before_calculate" />
         </LinearLayout>
 
         <LinearLayout
@@ -93,14 +72,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="West azimuth : " />
+                android:text="Full moon : " />
 
             <TextView
-                android:id="@+id/SunFargtextViewWestAzimuth"
+                android:id="@+id/MoonFargtextViewFullMoon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="00,00" />
+                android:text="@string/before_calculate" />
         </LinearLayout>
 
         <LinearLayout
@@ -114,14 +93,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="Civil evening time : " />
+                android:text="New moon : " />
 
             <TextView
-                android:id="@+id/SunFargtextViewCivilEvening"
+                android:id="@+id/MoonFargtextViewNewMoon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="00,00" />
+                android:text="@string/before_calculate" />
         </LinearLayout>
 
         <LinearLayout
@@ -135,14 +114,35 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="Civil daylight time : " />
+                android:text="Illumination moon : " />
 
             <TextView
-                android:id="@+id/SunFargtextViewCivilDaylight"
+                android:id="@+id/MoonFargtextViewPhase"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="00,00" />
+                android:text="@string/before_calculate" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="Synodic day : " />
+
+            <TextView
+                android:id="@+id/MoonFargtextViewSynodicDay"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/before_calculate" />
         </LinearLayout>
 
     </LinearLayout>
