--- a/app/src/main/res/layout-large-land/activity_main_large_land.xml
+++ b/app/src/main/res/layout-large-land/activity_main_large_land.xml
@@ -87,7 +87,7 @@
         />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
+        android:id="@+id/viewPagerLarge"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="30" />
