--- a/app/src/main/res/layout-large/activity_main.xml
+++ b/app/src/main/res/layout-large/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:weightSum="1">
@@ -81,9 +82,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="0.39">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -93,19 +93,19 @@
 
             <fragment
                 android:id="@+id/fragment1"
-                android:name="layout.BasicFragment"
+                android:name="layout.large.BlankFragment"
                 android:layout_width="match_parent"
                 android:layout_height="203dp"
                 android:layout_weight="1"
-                tools:layout="@layout/fragment_basic"></fragment>
+                tools:layout="@layout/fragment_blank"></fragment>
 
             <fragment
-                android:id="@+id/fragment1"
-                android:name="layout.AdditionFragment"
+                android:id="@+id/fragment2"
+                android:name="layout.large.BlankFragment"
                 android:layout_width="match_parent"
                 android:layout_height="203dp"
                 android:layout_weight="1"
-                tools:layout="@layout/fragment_addition"></fragment>
+                tools:layout="@layout/fragment_blank"></fragment>
 
 
         </LinearLayout>
@@ -117,25 +117,30 @@
             android:orientation="horizontal">
 
             <fragment
-                android:id="@+id/fragment1"
-                android:name="layout.SunFragment"
+                android:id="@+id/fragment3"
+                android:name="layout.large.BlankFragment"
                 android:layout_width="match_parent"
                 android:layout_height="203dp"
                 android:layout_weight="1"
-                tools:layout="@layout/fragment_sun"></fragment>
+                tools:layout="@layout/fragment_blank"></fragment>
 
             <fragment
-                android:id="@+id/fragment1"
-                android:name="layout.MoonFragment"
+                android:id="@+id/fragment4"
+                android:name="layout.large.BlankFragment"
                 android:layout_width="match_parent"
                 android:layout_height="203dp"
                 android:layout_weight="1"
-                tools:layout="@layout/fragment_moon"></fragment>
-
-
-
-
+                tools:layout="@layout/fragment_blank"></fragment>
         </LinearLayout>
-    </LinearLayout>
+
+        <fragment
+            android:id="@+id/fragment5"
+            android:name="layout.NextDayFragment"
+            android:layout_width="match_parent"
+            android:layout_height="203dp"
+            android:layout_weight="1"
+            tools:layout="@layout/fragment_blank"></fragment>
+
+</LinearLayout>
 
 </LinearLayout>
