--- a/app/src/main/res/layout-large/fragment_addition_l.xml
+++ b/app/src/main/res/layout-large/fragment_addition_l.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.AdditionFragment">
+    tools:context="layout.large.AdditionFragmentL">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
