--- a/app/src/main/res/layout-large/fragment_basic_l.xml
+++ b/app/src/main/res/layout-large/fragment_basic_l.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.BasicFragment">
+    tools:context="layout.large.BasicFragmentL">
 
     <LinearLayout
         android:layout_width="match_parent"
