--- a/app/src/main/res/layout-large/fragment_sun_l.xml
+++ b/app/src/main/res/layout-large/fragment_sun_l.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.MoonFragment">
+    tools:context="layout.large.SunFragmentL">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,12 +12,12 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imageView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            app:srcCompat="@drawable/icon_31" />
+            app:srcCompat="@drawable/icon_32" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -33,11 +33,32 @@
                 android:text="East time : " />
 
             <TextView
-                android:id="@+id/MoonFargtextViewRiseMoon"
+                android:id="@+id/SunFargtextViewEastTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/before_calculate" />
+                android:text="00,00" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:text="East azimuth : " />
+
+            <TextView
+                android:id="@+id/SunFargtextViewEastAzimuth"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="00,00" />
         </LinearLayout>
 
         <LinearLayout
@@ -54,11 +75,11 @@
                 android:text="West time : " />
 
             <TextView
-                android:id="@+id/MoonFargtextViewSetMoon"
+                android:id="@+id/SunFargtextViewWestTime"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/before_calculate" />
+                android:text="00,00" />
         </LinearLayout>
 
         <LinearLayout
@@ -72,14 +93,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="Full moon : " />
+                android:text="West azimuth : " />
 
             <TextView
-                android:id="@+id/MoonFargtextViewFullMoon"
+                android:id="@+id/SunFargtextViewWestAzimuth"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/before_calculate" />
+                android:text="00,00" />
         </LinearLayout>
 
         <LinearLayout
@@ -93,14 +114,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="New moon : " />
+                android:text="Civil evening time : " />
 
             <TextView
-                android:id="@+id/MoonFargtextViewNewMoon"
+                android:id="@+id/SunFargtextViewCivilEvening"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/before_calculate" />
+                android:text="00,00" />
         </LinearLayout>
 
         <LinearLayout
@@ -114,35 +135,14 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
-                android:text="Illumination moon : " />
+                android:text="Civil daylight time : " />
 
             <TextView
-                android:id="@+id/MoonFargtextViewPhase"
+                android:id="@+id/SunFargtextViewCivilDaylight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/before_calculate" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:text="Synodic day : " />
-
-            <TextView
-                android:id="@+id/MoonFargtextViewSynodicDay"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/before_calculate" />
+                android:text="00,00" />
         </LinearLayout>
 
     </LinearLayout>
