--- a/app/src/main/res/layout/fragment_blank_2.xml
+++ b/app/src/main/res/layout/fragment_blank_2.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.large.BlankFragment">
+    tools:context="layout.large.BlankFragment2">
 
 </FrameLayout>
